// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ApprovalList.vue > should emit event on order of the approvals change 1`] = `
<div
  class="v-container v-container--fluid v-locale--is-ltr py-4"
>
  <div
    class="v-row"
  >
    <div
      class="v-col"
    >
      No approval step
    </div>
  </div>
</div>
`;

exports[`ApprovalList.vue > should not render any approval when the list is empty 1`] = `
<div
  class="v-container v-container--fluid v-locale--is-ltr py-4"
>
  <div
    class="v-row"
  >
    <div
      class="v-col"
    >
      No approval step
    </div>
  </div>
</div>
`;

exports[`ApprovalList.vue > should render approvals when the list is with more than one item 1`] = `
<div
  class="v-container v-container--fluid v-locale--is-ltr py-4"
>
  <div
    class="v-row"
  >
    <div
      class="v-col"
    >
      <div>
        <div
          class="draggable-item"
          data-draggable="true"
        >
          <div
            class="v-container v-locale--is-ltr"
          >
            <div
              class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
            >
              <!---->
              <div
                class="v-card__loader"
              >
                <div
                  aria-hidden="true"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-theme--light v-locale--is-ltr"
                  role="progressbar"
                  style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                >
                  <!---->
                  <div
                    class="v-progress-linear__background"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="width: 0%;"
                  />
                  <transition-stub
                    appear="false"
                    css="true"
                    name="fade-transition"
                    persisted="false"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      
                      <div
                        class="v-progress-linear__indeterminate long"
                      />
                      <div
                        class="v-progress-linear__indeterminate short"
                      />
                      
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <!---->
              
              <div
                class="v-card-title"
              >
                <i
                  aria-hidden="true"
                  class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
                />
                <i
                  aria-hidden="true"
                  class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
                />
                <span
                  class="title font-weight-light"
                >
                  Should be approved by the users who
                </span>
                <div
                  class="flex-grow-1"
                />
                
                
                <button
                  class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
                  dark=""
                  fab=""
                  modelvalue="false"
                  small=""
                  type="button"
                >
                  
                  <span
                    class="v-btn__overlay"
                  />
                  <span
                    class="v-btn__underlay"
                  />
                  
                  <!---->
                  <span
                    class="v-btn__content"
                    data-no-activator=""
                  >
                    
                    
                    <i
                      aria-hidden="true"
                      class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
                    />
                    
                    
                  </span>
                  <!---->
                  <!---->
                </button>
                
                <!---->
                
              </div>
              <div
                class="v-card-text"
              >
                <div
                  class="v-row"
                >
                  <div
                    class="v-col"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    <div
                      class="v-row"
                    >
                      <!--v-if-->
                    </div>
                  </div>
                </div>
              </div>
              
              <!---->
              
              <!---->
              <span
                class="v-card__underlay"
              />
              
            </div>
            
            <!---->
            <!---->
            
          </div>
        </div>
        <div
          class="draggable-item"
          data-draggable="true"
        >
          <div
            class="v-container v-locale--is-ltr"
          >
            <div
              class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
            >
              <!---->
              <div
                class="v-card__loader"
              >
                <div
                  aria-hidden="true"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-theme--light v-locale--is-ltr"
                  role="progressbar"
                  style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                >
                  <!---->
                  <div
                    class="v-progress-linear__background"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="width: 0%;"
                  />
                  <transition-stub
                    appear="false"
                    css="true"
                    name="fade-transition"
                    persisted="false"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      
                      <div
                        class="v-progress-linear__indeterminate long"
                      />
                      <div
                        class="v-progress-linear__indeterminate short"
                      />
                      
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <!---->
              
              <div
                class="v-card-title"
              >
                <i
                  aria-hidden="true"
                  class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
                />
                <i
                  aria-hidden="true"
                  class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
                />
                <span
                  class="title font-weight-light"
                >
                  Should be approved by the users who
                </span>
                <div
                  class="flex-grow-1"
                />
                
                
                <button
                  class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
                  dark=""
                  fab=""
                  modelvalue="false"
                  small=""
                  type="button"
                >
                  
                  <span
                    class="v-btn__overlay"
                  />
                  <span
                    class="v-btn__underlay"
                  />
                  
                  <!---->
                  <span
                    class="v-btn__content"
                    data-no-activator=""
                  >
                    
                    
                    <i
                      aria-hidden="true"
                      class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
                    />
                    
                    
                  </span>
                  <!---->
                  <!---->
                </button>
                
                <!---->
                
              </div>
              <div
                class="v-card-text"
              >
                <div
                  class="v-row"
                >
                  <div
                    class="v-col"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    <div
                      class="v-row"
                    >
                      <!--v-if-->
                    </div>
                  </div>
                </div>
              </div>
              
              <!---->
              
              <!---->
              <span
                class="v-card__underlay"
              />
              
            </div>
            
            <!---->
            <!---->
            
          </div>
        </div>
        <div
          class="draggable-item"
          data-draggable="true"
        >
          <div
            class="v-container v-locale--is-ltr"
          >
            <div
              class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
            >
              <!---->
              <div
                class="v-card__loader"
              >
                <div
                  aria-hidden="true"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-theme--light v-locale--is-ltr"
                  role="progressbar"
                  style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                >
                  <!---->
                  <div
                    class="v-progress-linear__background"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="width: 0%;"
                  />
                  <transition-stub
                    appear="false"
                    css="true"
                    name="fade-transition"
                    persisted="false"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      
                      <div
                        class="v-progress-linear__indeterminate long"
                      />
                      <div
                        class="v-progress-linear__indeterminate short"
                      />
                      
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <!---->
              
              <div
                class="v-card-title"
              >
                <i
                  aria-hidden="true"
                  class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
                />
                <i
                  aria-hidden="true"
                  class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
                />
                <span
                  class="title font-weight-light"
                >
                  Should be approved by the users who
                </span>
                <div
                  class="flex-grow-1"
                />
                
                
                <button
                  class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
                  dark=""
                  fab=""
                  modelvalue="false"
                  small=""
                  type="button"
                >
                  
                  <span
                    class="v-btn__overlay"
                  />
                  <span
                    class="v-btn__underlay"
                  />
                  
                  <!---->
                  <span
                    class="v-btn__content"
                    data-no-activator=""
                  >
                    
                    
                    <i
                      aria-hidden="true"
                      class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
                    />
                    
                    
                  </span>
                  <!---->
                  <!---->
                </button>
                
                <!---->
                
              </div>
              <div
                class="v-card-text"
              >
                <div
                  class="v-row"
                >
                  <div
                    class="v-col"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    <div
                      class="v-row"
                    >
                      <!--v-if-->
                    </div>
                  </div>
                </div>
              </div>
              
              <!---->
              
              <!---->
              <span
                class="v-card__underlay"
              />
              
            </div>
            
            <!---->
            <!---->
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApprovalList.vue > should render approvals when the list is with one item 1`] = `
<div
  class="v-container v-container--fluid v-locale--is-ltr py-4"
>
  <div
    class="v-row"
  >
    <div
      class="v-col"
    >
      <div>
        <div
          class="draggable-item"
          data-draggable="true"
        >
          <div
            class="v-container v-locale--is-ltr"
          >
            <div
              class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
            >
              <!---->
              <div
                class="v-card__loader"
              >
                <div
                  aria-hidden="true"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-theme--light v-locale--is-ltr"
                  role="progressbar"
                  style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                >
                  <!---->
                  <div
                    class="v-progress-linear__background"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="width: 0%;"
                  />
                  <transition-stub
                    appear="false"
                    css="true"
                    name="fade-transition"
                    persisted="false"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      
                      <div
                        class="v-progress-linear__indeterminate long"
                      />
                      <div
                        class="v-progress-linear__indeterminate short"
                      />
                      
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <!---->
              
              <div
                class="v-card-title"
              >
                <i
                  aria-hidden="true"
                  class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
                />
                <i
                  aria-hidden="true"
                  class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
                />
                <span
                  class="title font-weight-light"
                >
                  Should be approved by the users who
                </span>
                <div
                  class="flex-grow-1"
                />
                
                
                <button
                  class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
                  dark=""
                  fab=""
                  modelvalue="false"
                  small=""
                  type="button"
                >
                  
                  <span
                    class="v-btn__overlay"
                  />
                  <span
                    class="v-btn__underlay"
                  />
                  
                  <!---->
                  <span
                    class="v-btn__content"
                    data-no-activator=""
                  >
                    
                    
                    <i
                      aria-hidden="true"
                      class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
                    />
                    
                    
                  </span>
                  <!---->
                  <!---->
                </button>
                
                <!---->
                
              </div>
              <div
                class="v-card-text"
              >
                <div
                  class="v-row"
                >
                  <div
                    class="v-col"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    <div
                      class="v-row"
                    >
                      <!--v-if-->
                    </div>
                  </div>
                </div>
              </div>
              
              <!---->
              
              <!---->
              <span
                class="v-card__underlay"
              />
              
            </div>
            
            <!---->
            <!---->
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApprovalList.vue > should update interanal items when approvals are updated 1`] = `
<div
  class="v-container v-container--fluid v-locale--is-ltr py-4"
>
  <div
    class="v-row"
  >
    <div
      class="v-col"
    >
      <div>
        <div
          class="draggable-item"
          data-draggable="true"
        >
          <div
            class="v-container v-locale--is-ltr"
          >
            <div
              class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
            >
              <!---->
              <div
                class="v-card__loader"
              >
                <div
                  aria-hidden="true"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-theme--light v-locale--is-ltr"
                  role="progressbar"
                  style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                >
                  <!---->
                  <div
                    class="v-progress-linear__background"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="width: 0%;"
                  />
                  <transition-stub
                    appear="false"
                    css="true"
                    name="fade-transition"
                    persisted="false"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      
                      <div
                        class="v-progress-linear__indeterminate long"
                      />
                      <div
                        class="v-progress-linear__indeterminate short"
                      />
                      
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <!---->
              
              <div
                class="v-card-title"
              >
                <!--v-if-->
                <i
                  aria-hidden="true"
                  class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
                />
                <span
                  class="title font-weight-light"
                >
                  Should be approved by the users who
                </span>
                <div
                  class="flex-grow-1"
                />
                <!--v-if-->
              </div>
              <div
                class="v-card-text"
              >
                <div
                  class="v-row"
                >
                  <div
                    class="v-col"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    <div
                      class="v-row"
                    >
                      <!--v-if-->
                    </div>
                  </div>
                </div>
              </div>
              
              <!---->
              
              <!---->
              <span
                class="v-card__underlay"
              />
              
            </div>
            
            <!---->
            <!---->
            
          </div>
        </div>
        <div
          class="draggable-item"
          data-draggable="true"
        >
          <div
            class="v-container v-locale--is-ltr"
          >
            <div
              class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
            >
              <!---->
              <div
                class="v-card__loader"
              >
                <div
                  aria-hidden="true"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-theme--light v-locale--is-ltr"
                  role="progressbar"
                  style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                >
                  <!---->
                  <div
                    class="v-progress-linear__background"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="width: 0%;"
                  />
                  <transition-stub
                    appear="false"
                    css="true"
                    name="fade-transition"
                    persisted="false"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      
                      <div
                        class="v-progress-linear__indeterminate long"
                      />
                      <div
                        class="v-progress-linear__indeterminate short"
                      />
                      
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <!---->
              
              <div
                class="v-card-title"
              >
                <!--v-if-->
                <i
                  aria-hidden="true"
                  class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
                />
                <span
                  class="title font-weight-light"
                >
                  Should be approved by the users who
                </span>
                <div
                  class="flex-grow-1"
                />
                <!--v-if-->
              </div>
              <div
                class="v-card-text"
              >
                <div
                  class="v-row"
                >
                  <div
                    class="v-col"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    <div
                      class="v-row"
                    >
                      <!--v-if-->
                    </div>
                  </div>
                </div>
              </div>
              
              <!---->
              
              <!---->
              <span
                class="v-card__underlay"
              />
              
            </div>
            
            <!---->
            <!---->
            
          </div>
        </div>
        <div
          class="draggable-item"
          data-draggable="true"
        >
          <div
            class="v-container v-locale--is-ltr"
          >
            <div
              class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
            >
              <!---->
              <div
                class="v-card__loader"
              >
                <div
                  aria-hidden="true"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-theme--light v-locale--is-ltr"
                  role="progressbar"
                  style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                >
                  <!---->
                  <div
                    class="v-progress-linear__background"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="width: 0%;"
                  />
                  <transition-stub
                    appear="false"
                    css="true"
                    name="fade-transition"
                    persisted="false"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      
                      <div
                        class="v-progress-linear__indeterminate long"
                      />
                      <div
                        class="v-progress-linear__indeterminate short"
                      />
                      
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <!---->
              
              <div
                class="v-card-title"
              >
                <!--v-if-->
                <i
                  aria-hidden="true"
                  class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
                />
                <span
                  class="title font-weight-light"
                >
                  Should be approved by the users who
                </span>
                <div
                  class="flex-grow-1"
                />
                <!--v-if-->
              </div>
              <div
                class="v-card-text"
              >
                <div
                  class="v-row"
                >
                  <div
                    class="v-col"
                  >
                    <!--v-if-->
                    <!--v-if-->
                    <div
                      class="v-row"
                    >
                      <!--v-if-->
                    </div>
                  </div>
                </div>
              </div>
              
              <!---->
              
              <!---->
              <span
                class="v-card__underlay"
              />
              
            </div>
            
            <!---->
            <!---->
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
